css/critical.css
/* ... */
.item__allergens {
  grid-column: 1/-1;
  display: flex
}

.item__name,
.item__price {
  text-transform: uppercase;
  margin: .5rem 0;
  font-weight: 900
}

.extras {
  background: #f1f1ea;
  color: #563c1f;
  grid-column: 1/3;
  padding: 1rem
}

em.or {
  color: #a30a0a;
  font-weight: 900
}

@media (min-width:1200px) {
  .menu {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(4, 1fr);
    align-items: stretch
  }

  .menu .entrees {
    grid-column: 1/4;
    grid-row: 1/4
  }

  .menu .sides {
    grid-column: 4/5
  }

  .menu .menu-download {
    grid-column: 4/5;
    grid-row: 5/6
  }

  .menu .order-online {
    grid-column: 4/5;
    grid-row: 6/6
  }
}

@media (min-width:550px) {
  .entrees {
    grid-template-columns: repeat(2, 1fr);
    display: grid;
    grid-auto-flow: dense;
    align-items: flex-start
  }

  .entrees h3 {
    grid-column: 1/-1;
    margin-top: 0
  }
}

@media (min-width:1500px) {
  .entrees {
    grid-column-gap: 20px
  }
}

.entrees .item {
  position: relative;
  padding: 2rem 2rem
}

@media (min-width:1200px) {
  .entrees .item {
    display: flex;
    align-items: center;
    padding: 1rem
  }

  .entrees .item__desc {
    flex: 1;
    padding-left: 1rem
  }

  .entrees .item__image {
    flex: 0 0 180px
  }
}

.entrees .item__image {
  position: relative;
  max-width: 200px
}

.entrees .item__image img {
  width: 100%
}

.entrees .item__image:after {
  content: "";
  position: absolute;
  right: 0;
  top: 0;
  width: 50%;
  height: 100%;
  background: linear-gradient(to right, transparent, #e2dccc)
}

.sides {
  padding-bottom: 1rem
}

.sides .item {
  padding: 1rem 2rem
}

.sides h3 {
  margin-bottom: .8rem;
  margin-top: 0;
  line-height: 3.6rem
}

#others {
  grid-column: 1 / 10;
  padding: 1rem;
  margin-left: 1rem
}

.tarts {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-bottom: 1.5rem
}

.tarts h3 {
  width: 100%;
  margin-bottom: 1rem
}

.tarts .item {
  flex: 1 1 50%;
  min-width: 16em;
  padding: .5rem 2rem
}

.tarts .item__image {
  text-align: center
}

.tarts .item img {
  max-width: 170px
}

.tarts .item__name,
.tarts .item__price {
  margin-top: 1rem
}

.latte {
  display: grid;
  grid-column-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  padding: 1rem
}

.latte h3 {
  grid-column: 1/-1;
  margin-bottom: 1rem;
  transform: translate(-1rem, -1rem);
  width: calc(100% + 2rem)
}

@media (min-width:1500px) {
  .latte {
    grid-template-columns: min-content repeat(4, 1fr)
  }

  .latte h3 {
    grid-column: 1/2;
    grid-row: 1/3;
    writing-mode: tb-rl;
    transform: translate(-1rem, -1rem) rotate(-180deg);
    width: calc(100%);
    height: calc(100% + 2rem);
    padding-bottom: 2rem;
    text-align: right
  }
}

.latte .item {
  padding: 1rem
}

.latte .item__image {
  text-align: center
}

.latte .item img {
  width: 90%;
  max-width: 160px
}

.latte .item__name,
.latte .item__price {
  margin-top: 1rem
}

button.menu-download {
  display: block;
  background: #ffd362;
  text-align: center;
  color: #000;
  text-transform: uppercase;
  padding: 1rem;
  cursor: pointer;
  border: 3px solid #000
}

button.menu-download:focus,
button.menu-download:hover,
button.order-online:focus,
button.order-online:hover {
  background: #0b132b;
  color: #fff
}

button.menu-download a,
button.order-online a {
  text-decoration: none;
  font-size: 1.25rem;
  font-weight: 900
}

button.order-online {
  display: block;
  background: #ffd362;
  text-align: center;
  color: #000;
  text-transform: uppercase;
  padding: 1rem;
  margin-top: 1rem;
  cursor: pointer;
  border: 3px solid #000
}

@media (min-width:320px) and (max-width:1200px) {

  button.menu-download,
  button.order-online {
    padding: 2rem 4rem;
    border: none;
    width: 100vw
  }
}

footer {
  margin-top: 1rem;
  font-weight: 700;
  text-transform: uppercase;
  /* align-items: center;
  justify-content: space-between;
  display: flex;
  flex-wrap: wrap; */
  line-height: 5.5rem
}

.online {
  display: flex
}

footer p {
  width: 100%;
  margin-bottom: 1rem
}

footer .social-item {
  display: flex
}

footer .social-item i {
  display: flex;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  text-align: center;
  color: #e2dccc
}

footer .social-item:nth-child(1) {
  color: #3050a6
}

footer .social-item:nth-child(1) i {
  background: #3050a6
}

footer .social-item:nth-child(2) {
  color: #dd2a7b
}

footer .social-item:nth-child(2) i {
  background: #dd2a7b
}

footer .social-item:nth-child(4) {
  color: #ca3101
}

footer .social-item:nth-child(4) i {
  background: #ca3101
}

footer .social-item:hover {
  color: #04110f
}

footer .social-item:hover i {
  background: #04110f
}

@media (min-width:550px) {
  footer p {
    flex: 1;
    margin: 0;
    padding: 0 1rem
  }
}

@media (min-width:880px) {
  footer .social-item {
    margin: 0 0 0 1rem
  }
}

:root {
  --flow-space: get-size("600")
}

body {
  background: get-color("light");
  color: get-color("dark");
  line-height: 1.5
}

a:not([class]) {
  color: currentColor;
  text-decoration-color: get-color("brown")
}

:focus {
  outline: 2px solid get-color("brown");
  outline-offset: .25rem
}

main:focus {
  outline: none;
}

h1,
h2,
h3,
h4 {
  font-weight: 900
}

::selection {
  color: get-color("light");
  background: get-color("dark")
}

::webkit-scrollbar {
  height: 1rem
}

::-webkit-scrollbar-track {
  background-color: transparent;
  border: 1px solid get-color("dark");
  border-radius: .25rem
}

::-webkit-scrollbar-thumb {
  background-color: get-color("dark");
  border-radius: .25rem
}

.icon {
  display: inline-block;
  width: 50%;
  height: 100%;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor
}

